--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "disconnect": "^1.2.2",
+    "dotenv": "^16.1.4",
     "env": "^0.0.2",
     "express": "^4.18.2"
   }
