--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "disconnect": "^1.2.2",
     "dotenv": "^16.1.4",
     "env": "^0.0.2",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jest": "^29.6.0",
+    "supertest": "^6.3.3"
   }
 }
